Fri Feb 10 19:22:34 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/CosTrading.mpc:

          Added iortable as a base project for the CosTrading_Serv library.

        * orbsvcs/orbsvcs/Trader/Trading_Loader.cpp:

          Add the TradingService IOR to the IORTable so that it may be used
          as a corbaloc within a -ORBInitRef.

        * orbsvcs/tests/Trading/run_test.pl:

          Modified this test to use a corbaloc to locate the TradingService.

Fri Feb 10 15:49:17 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * orbsvcs/orbsvcs/FaultTolerance/FT_Service_Callbacks.cpp:

          Reverted back a change I did because its non-compliance
          with the FT Spec.
          Thu Feb  9 20:06:18 UTC 2006  Wallace Zhang

Fri Feb 10 15:28:50 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_typecode/value_typecode.cpp:

          Applied the fix suggested by Johnny Willemsen
          <jwillemsen@remedy.nl> in [BUGID:2145], since it was
          never supplied by the bug reporter, and closed the entry.

Fri Feb 10 15:24:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/configurations.html:
          Fixed link

Fri Feb 10 15:00:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * tao/ServerRequestInterceptor_Adapter.h
        * tao/PI_Server/ServerInterceptorAdapter.cpp:
        * tao/PortableServer/Object_Adapter.cpp:
          Correct compile problems for TAO_HAS_EXTENDED_FT_INTERCEPTORS
          builds. This build configuration has been left behind with
          recent changes.

Fri Feb 10 14:35:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/EC_Mcast/run_test.pl:
        * orbsvcs/tests/EC_MT_Mcast/run_test.pl:
          When we can't spawn the processes, just exit directly instead
          of waiting on a timeout. Speedsup the daily builds when we
          can't build the executables
